[AUTH] added authentication