@@ -5,7 +5,7 @@ import java.util.List;
 
 public enum Role {
 
-    CUSTOMER(Arrays.asList(Permission.READ_ALL_PRODUCTS)),
+    CUSTOMER(List.of(Permission.READ_ALL_PRODUCTS)),
 
     ADMIN(Arrays.asList(Permission.READ_ALL_PRODUCTS, Permission.SAVE_ONE_PRODUCT));
 
